testdata/not_valid/key_not_uniq_nested.out
error: testdata/not_valid/key_not_uniq_nested.kevs:4: parse: key 'x' is not unique for current table
